# haskell-home-controller

./: .gitignore  APDU.hs  BlindsDevice.hs  Config.hs  Console.hs  DPTs.hs  Device.hs  DeviceRunner.hs  Dockerfile  ElphiWohnung.hs  FM2.hs  GroupAddress.hs  HaskellHomeController.cabal  KNX.hs  KNXAddress.hs  KNXDatatypes.hs  KNXMessages.hs  KNXTelegram.hs  Main.hs  Makefile  README.md  StaircaseLight.hs  Telegram.hs  TimeSender.hs  Webinterface.hs  ga.xml  huetest.hs  test.hs
.gitea/workflows/: release.yaml
Hue/: Datatypes.hs  Hue.hs
src/: APDU.hs  BlindsDevice.hs  Config.hs  Console.hs  DPTs.hs  DeviceTypes.hs  ElphiWohnung.hs  KNX.hs  KNXAddress.hs  Main.hs  TimeSender.hs  Webinterface.hs
src/Hue/: Hue.hs
web/: index.html  stream.js  style.css
