cabal-version: 2.2
name: haskell-home-controller
version: 0.0.0.1
executable Main
  main-is: Main.hs
  build-depends:
    base,
    pretty-terminal,
    aeson,
    http-client-tls,
    http-conduit,
    time,
    yesod,
    containers,
    monad-logger,
    stm,
    binary,
    split,
    time>=1.12.2,
    text
  default-language: Haskell2010
