cabal-version: 3.0
name: haskell-home-controller
version: 0.0.0.1
executable homecontrol
  main-is: Main.hs
  other-modules:
    APDU
    BlindsDevice
    Console
    DPTs
    Device
    DeviceRunner
    ElphiWohnung
    FM2
    KNX
    KNXAddress
    KNXDatatypes
    KNXMessages
    KNXTelegram
    StaircaseLight
    TimeSender
    Webinterface
  build-depends:
    aeson<=2,
    async,
    base,
    binary,
    bytestring,
    conduit,
    conduit-extra,
    connection,
    containers,
    hashable,
    hashable,
    http-client,
    http-client-tls,
    http-conduit,
    ini,
    monad-logger,
    mtl,
    network,
    pretty-show,
    pretty-terminal,
    scientific,
    split,
    stm,
    text,
    time,
    transformers,
    unordered-containers,
    uuid,
    vector,
    yesod,
    yesod-static
  default-language: Haskell2010
