cabal-version: 3.0
name: HaskellHomeController
version: 0.0.0.1
executable homecontrol
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    APDU
    BlindsDevice
    Config
    Console
    Device
    DeviceRunner
    DeviceTypes
    DPTs
    ElphiWohnung
    FM2
    Hue.Datatypes
    Hue.Hue
    KNX
    KNXAddress
    KNXDatatypes
    KNXMessages
    KNXTelegram
    StaircaseLight
    TimeSender
    Webinterface
  build-depends:
    aeson,
    async,
    base,
    binary,
    bytestring,
    conduit,
    conduit-extra,
    connection,
    containers,
    hashable,
    hashable,
    http-client,
    http-client-tls,
    http-conduit,
    ini,
    monad-logger,
    mtl,
    network,
    optparse-applicative,
    pretty-show,
    pretty-terminal,
    scientific,
    split,
    stm,
    text,
    time,
    transformers,
    unordered-containers,
    uuid,
    vector,
    yesod,
    yesod-static
  default-language: Haskell2010
